# cmake2graph

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: publish-test.yml  publish.yml  python-package.yml
cmake2graph/: __init__.py  cli.py
cpp-cmake-project/: CMakeLists.txt  README.md
cpp-cmake-project/src/: CMakeLists.txt  main.cpp
cpp-cmake-project/src/core/: CMakeLists.txt
cpp-cmake-project/src/core/include/core/: logger.hpp  utils.hpp
cpp-cmake-project/src/core/src/: logger.cpp  utils.cpp
cpp-cmake-project/src/math/: CMakeLists.txt
cpp-cmake-project/src/math/include/math/: matrix.hpp  vector.hpp
cpp-cmake-project/src/math/src/: matrix.cpp  vector.cpp
cpp-cmake-project/tests/: CMakeLists.txt  core_tests.cpp  math_tests.cpp
tests/: conftest.py  test_cmake2graph.py
